# classifier-performance

./: README.md  adaboost.py  classifiers.py  cross_validation.py  knn.py  main.py  pyproject.toml  requirements.txt  results.py  svm.py  utils.py
comparing-classifiers/: main.py  results.py
data/: Dataset.csv  Raw Data.csv  Testing.csv  Training.csv  test_data.txt  training_data.txt
