[tool.poetry]
name = "classifier performance"
version = "0.1.0"
description = "Compare results of different classifiers"
authors = ["mike <myke2424@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.3"
matplotlib = "^3.5.1"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
